codex-rs/login/src/snapshots/codex_login__progress__tests__failure_callback_state_mismatch.snap
---
source: login/src/progress.rs
expression: "format_login_progress(phase).expect(\"sample should render\")"
---
Couldn't verify this sign-in attempt
Codex couldn't finish signing in while validating OAuth callback. Retry sign-in from the same terminal, and avoid reusing an old browser tab.
Help: https://developers.openai.com/codex/auth
Details: callback_state_mismatch - State mismatch
