codex-rs/login/src/snapshots/codex_login__progress__tests__failure_local_server_unavailable.snap
---
source: login/src/progress.rs
expression: "format_login_progress(phase).expect(\"sample should render\")"
---
Couldn't start local sign-in
Codex couldn't finish signing in while binding local callback server. Retry in a moment. If it keeps happening, another process may be holding the local callback port.
Help: https://developers.openai.com/codex/auth
Details: local_server_unavailable - Port 127.0.0.1:1455 is already in use after 2000 ms
