codex-rs/login/src/snapshots/codex_login__progress__tests__failure_login_cancelled.snap
---
source: login/src/progress.rs
expression: "format_login_progress(phase).expect(\"sample should render\")"
---
Sign-in was cancelled
Codex couldn't finish signing in while waiting for OAuth callback. Run `codex login` to try again.
Help: https://developers.openai.com/codex/auth
Details: login_cancelled - Login was not completed
