codex-rs/login/src/snapshots/codex_login__progress__tests__failure_token_exchange_timeout.snap
---
source: login/src/progress.rs
expression: "format_login_progress(phase).expect(\"sample should render\")"
---
The auth server took too long to respond
Codex couldn't finish signing in while exchanging authorization code for tokens. Check your network connection or proxy, then try again.
Help: https://developers.openai.com/codex/auth
Details: token_exchange_timeout - operation timed out
